fixes small bugs in display of text

--- a/_projects/bible-word-checker/index.html
+++ b/_projects/bible-word-checker/index.html
@@ -18,18 +18,20 @@
   <p>A simple web tool that checks whether input words are present in the Bible (King James Version sourced from <a href="https://openbible.com/texts.htm">Open Bible</a><br>
   <ul>
     <li>Built using plain HTML, CSS, and JavaScript</li>
-    <li>Uses a JSON file (`bible_words.json`) containing a list of words</li>
+    <li>Uses a JSON file containing a list of words</li>
     <li>Highlights which words are found in the Bible and which are not</li>
   </ul>
 
   <h2>Usage</h2>
-  <p>1. Type your text in the text area</p>
-  <p>2. Click the "Check Words" button</p>
+  <ol>
+    <li>Type your text in the text area</li>
+    <li>Click the "Check Words" button</li>
+  </ol>
 
   <h2>Links</h2>
   <p><a href="https://github.com/krishyeah/bible-word-checker">GitHub</a></p>
   <p><a href="https://krishyeah.github.io/projects/">My Other Projects</a></p>
-  
+
   <script src="script.js"></script>
 </body>
 </html>
