adds sudoku solver project

--- a/_projects/bible-word-checker/index.html
+++ b/_projects/bible-word-checker/index.html
@@ -29,7 +29,7 @@
   </ol>
 
   <h2>Links</h2>
-  <p><a href="https://github.com/krishyeah/bible-word-checker">GitHub</a></p>
+  <p><a href="https://github.com/krishyeah/bible-word-checker">GitHub Source Code</a></p>
   <p><a href="https://krishyeah.github.io/projects/">My Other Projects</a></p>
 
   <script src="script.js"></script>
